Tweaking youtube settings.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/_6xNuUEnh2g?ecver=1&autoplay=1&loop=1&start=27&end=33" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_6xNuUEnh2g?ecver=1&autoplay=1&loop=1&controls=0&showinfo=0&start=27&end=33" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
