--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-100507713-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_6xNuUEnh2g?ecver=1&autoplay=1&controls=0&showinfo=0&rel=0&start=27&end=33" frameborder="0" allowfullscreen></iframe>
