--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </script>
   </head>
   <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Idl-K8s1GYo?ecver=1&autoplay=1&controls=0&showinfo=0&rel=0&start=29&end=36" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Idl-K8s1GYo?ecver=1&autoplay=1&controls=0&showinfo=0&rel=0&start=29&end=36" frameborder="0" allow="autoplay; fullscreen"></iframe>
   </body>
 </html>
